--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Movie Review</string>
+    <string name="no_internet">No internet connection available</string>
+    <string name="something_went_wrong">Something went wrong!</string>
+    <string name="retry">Retry</string>
 </resources>
